--- a/Views/SystemUsers/Register.cshtml
+++ b/Views/SystemUsers/Register.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ishop.Models.SystemUser
 @{
     ViewData["Title"] = "Register";
 
@@ -15,29 +15,45 @@
                     <div class="text-center">
                         <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                     </div>
-                    <form class="user">
+                    <form class="user" asp-action="Create">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <h1>@ViewBag.message</h1>
                         <div class="form-group row">
                             <div class="col-sm-6 mb-3 mb-sm-0">
-                                <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="First Name">
+                                <input type="text" class="form-control form-control-user" asp-for="DisplayName" placeholder="Display Name" required>
                             </div>
-                            <div class="col-sm-6">
-                                <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Last Name">
+                            <div class="col-sm-6 mb-3 mb-sm-0">
+                                <input type="text" class="form-control form-control-user" asp-for="SuEmail" placeholder="E-mail" required>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Email Address">
-                        </div>
+
                         <div class="form-group row">
                             <div class="col-sm-6 mb-3 mb-sm-0">
-                                <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
+                                <input type="text" class="form-control form-control-user" asp-for="SuUsername" placeholder="Username" required>
                             </div>
                             <div class="col-sm-6">
-                                <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repeat Password">
+                                <input type="password" class="form-control form-control-user" asp-for="SuPassword" placeholder="Password" required>
                             </div>
                         </div>
-                        <a href="login.html" class="btn btn-primary btn-user btn-block">
+
+
+                        <hr>
+
+                        <div class="form-group row">
+                            <div class="col-sm-6 mb-3 mb-sm-0">
+
+                                <select class="form-control " asp-for="SuRole" placeholder="System Role">
+                                    <option value="Staff">Staff</option>
+                                    <option value="Admin">Admin</option>
+                                </select>
+                            </div>
+                            <div class="col-sm-6">
+                                <input type="file" class="form-control" asp-for="SuProfilePic" placeholder="DP">
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-user btn-block">
                             Register Account
-                        </a>
+                        </button>
                         <hr>
                         <a href="index.html" class="btn btn-google btn-user btn-block">
                             <i class="fab fa-google fa-fw"></i> Register with Google
@@ -48,13 +64,14 @@
                     </form>
                     <hr>
                     <div class="text-center">
-                        <a class="small" href="forgot-password.html">Forgot Password?</a>
+                        <a class="small" href="/systemusers/forgetpassword/">Forgot Password?</a>
                     </div>
                     <div class="text-center">
-                        <a class="small" href="login.html">Already have an account? Login!</a>
+                        <a class="small" href="/systemusers/login/">Already have an account? Login!</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
