--- a/Views/SystemUsers/Register.cshtml
+++ b/Views/SystemUsers/Register.cshtml
@@ -15,9 +15,9 @@
                     <div class="text-center">
                         <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                     </div>
-                    <form class="user" asp-action="Create">
+                    <form class="user" asp-action="Register">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <h1>@ViewBag.message</h1>
+                        <h1 class="alert alert-danger">@TempData["message"]</h1>
                         <div class="form-group row">
                             <div class="col-sm-6 mb-3 mb-sm-0">
                                 <input type="text" class="form-control form-control-user" asp-for="DisplayName" placeholder="Display Name" required>
