--- a/Views/SystemUsers/Login.cshtml
+++ b/Views/SystemUsers/Login.cshtml
@@ -17,7 +17,7 @@
                     </div>
                     <form class="user">
                         <div class="form-group">
-                            <input type="text" class="form-control form-control-user" id="inputUsername" aria-describedby="emailHelp" placeholder="Enter Username..." required>
+                            <input type="text" class="form-control form-control-user" id="inputUsername" placeholder="Enter Username..." required>
                         </div>
                         <div class="form-group">
                             <input type="password" class="form-control form-control-user" id="inputPassword" placeholder="Password" required>
@@ -58,9 +58,16 @@
     <script>
         $("#btnLogin").click(function (e) {
             e.preventDefault();
+
+            if ($("#inputUsername").val()=="" || $("#inputPassword").val()=="" ) {
+                alert($("#inputUsername").val() + "   " +$("#inputPassword").val());
+                alert("Please Fill all Fields");
+
+            } else { 
+
             var username = $("#inputUsername").val();
             var password = $("#inputPassword").val();
-            alert(username);
+            
             $.ajax({
                 type: "POST",
                 url: "/SystemUsers/LoginCheck/",
@@ -79,6 +86,13 @@
                     alert('error');
                 }
             });
+                }
+
+
+
+
+
+
         });
 
 
