--- a/Views/Categories/Create.cshtml
+++ b/Views/Categories/Create.cshtml
@@ -4,57 +4,55 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Category</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CatName" class="control-label"></label>
-                <input asp-for="CatName" class="form-control" />
-                <span asp-validation-for="CatName" class="text-danger"></span>
+
+
+<div class="card o-hidden border-0 shadow-lg my-5 col-lg-8">
+    <div class="card-body p-0">
+        <!-- Nested Row within Card Body -->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="p-5">
+                    <div class="text-center">
+                        <h1 class="h4 text-gray-900 mb-4 alert alert-primary">Add New Category!!!!</h1>
+                    </div>
+                    
+
+                    <form class="user" asp-action="Create">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group">
+                            <label asp-for="CatName" class="control-label"></label>
+                            <input asp-for="CatName" class="form-control" />
+                            <span asp-validation-for="CatName" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="CatPic" class="control-label"></label>
+                            <input asp-for="CatPic" class="form-control" />
+                            <span asp-validation-for="CatPic" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="CatKeywords" class="control-label"></label>
+                            <input asp-for="CatKeywords" class="form-control" />
+                            <span asp-validation-for="CatKeywords" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Add New Category" class="btn btn-primary col-md-12" />
+                        </div>
+                    </form>
+
+                    <hr>
+                    <div class="text-center">
+                        <a class="small" asp-action="Index">Back to List</a>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="CatPic" class="control-label"></label>
-                <input asp-for="CatPic" class="form-control" />
-                <span asp-validation-for="CatPic" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CatKeywords" class="control-label"></label>
-                <input asp-for="CatKeywords" class="form-control" />
-                <span asp-validation-for="CatKeywords" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CatStatus" class="control-label"></label>
-                <input asp-for="CatStatus" class="form-control" />
-                <span asp-validation-for="CatStatus" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AddedDate" class="control-label"></label>
-                <input asp-for="AddedDate" class="form-control" />
-                <span asp-validation-for="AddedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AddedBy" class="control-label"></label>
-                <input asp-for="AddedBy" class="form-control" />
-                <span asp-validation-for="AddedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Extra" class="control-label"></label>
-                <input asp-for="Extra" class="form-control" />
-                <span asp-validation-for="Extra" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
+        <div>
+           
+        </div>
+
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
