--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -4,68 +4,76 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+    <div class="card shadow mb-4">
+        <div class="card-header py-3">
+            <h3 class="m-0 font-weight-bold text-primary text-center alert alert-primary">Categories</h3>
+        </div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.CatName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CatPic)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CatKeywords)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CatStatus)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AddedDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AddedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Extra)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CatName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CatPic)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CatKeywords)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CatStatus)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AddedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AddedBy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Extra)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+        <div class="card-body">
+
+            <div class="text-center">
+                <a class="btn btn-circle btn-primary" href="Create"><i class="fa fa-plus"></i></a>
+            </div>
+
+            <div class="table-responsive">
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.CatName)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.CatPic)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.CatKeywords)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.CatStatus)
+                            </th>
+                            <th>actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CatName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CatPic)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CatKeywords)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CatStatus)
+                                </td>
+                                <td>
+                                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+    </div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+
+    <!-- Page level plugins -->
+    <script src="~/dashboard/vendor/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/dashboard/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+    <!-- Page level custom scripts -->
+    <script src="~/dashboard/js/demo/datatables-demo.js"></script>
+
+ }
