Create Prod & Category Done with Feature Image upload Sessions Display  use in Layout File

--- a/Views/IshopProducts/DeleteCategory.cshtml
+++ b/Views/IshopProducts/DeleteCategory.cshtml
@@ -49,11 +49,27 @@
             @Html.DisplayFor(model => model.CatPic2)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CatKeywords)
+            @Html.DisplayNameFor(model => model.CatMetaTitle)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CatKeywords)
+            @Html.DisplayFor(model => model.CatMetaTitle)
         </dd>
+        
+        <dt>
+            @Html.DisplayNameFor(model => model.CatMetaDescription)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CatMetaDescription)
+        </dd>
+        
+        <dt>
+            @Html.DisplayNameFor(model => model.CatMetaKeywords)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CatMetaKeywords)
+        </dd>
+
+
         <dt>
             @Html.DisplayNameFor(model => model.Status)
         </dt>
@@ -71,18 +87,6 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Ranking)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CatPermalink)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CatPermalink)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CatMetatag)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CatMetatag)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ShowMenu)
