--- a/Views/IshopProducts/EditCategory.cshtml
+++ b/Views/IshopProducts/EditCategory.cshtml
@@ -45,10 +45,25 @@
                 <span asp-validation-for="CatPic2" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CatKeywords" class="control-label"></label>
-                <input asp-for="CatKeywords" class="form-control" />
-                <span asp-validation-for="CatKeywords" class="text-danger"></span>
+                <label asp-for="CatMetaTitle" class="control-label"></label>
+                <input asp-for="CatMetaTitle" class="form-control" />
+                <span asp-validation-for="CatMetaTitle" class="text-danger"></span>
             </div>
+           
+            <div class="form-group">
+                <label asp-for="CatMetaDescription" class="control-label"></label>
+                <input asp-for="CatMetaDescription" class="form-control" />
+                <span asp-validation-for="CatMetaDescription" class="text-danger"></span>
+            </div>
+           
+            <div class="form-group">
+                <label asp-for="CatMetaKeywords" class="control-label"></label>
+                <input asp-for="CatMetaKeywords" class="form-control" />
+                <span asp-validation-for="CatMetaKeywords" class="text-danger"></span>
+            </div>
+            
+            
+            
             <div class="form-group">
                 <div class="checkbox">
                     <label>
@@ -67,16 +82,6 @@
                 <label asp-for="Ranking" class="control-label"></label>
                 <input asp-for="Ranking" class="form-control" />
                 <span asp-validation-for="Ranking" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CatPermalink" class="control-label"></label>
-                <input asp-for="CatPermalink" class="form-control" />
-                <span asp-validation-for="CatPermalink" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CatMetatag" class="control-label"></label>
-                <input asp-for="CatMetatag" class="form-control" />
-                <span asp-validation-for="CatMetatag" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ShowMenu" class="control-label"></label>
