--- a/Views/IshopProducts/DetailsCategory.cshtml
+++ b/Views/IshopProducts/DetailsCategory.cshtml
@@ -48,11 +48,25 @@
             @Html.DisplayFor(model => model.CatPic2)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CatKeywords)
+            @Html.DisplayNameFor(model => model.CatMetaTitle)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CatKeywords)
+            @Html.DisplayFor(model => model.CatMetaTitle)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.CatMetaDescription)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CatMetaDescription)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.CatMetaKeywords)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CatMetaKeywords)
+        </dd>
+
+
         <dt>
             @Html.DisplayNameFor(model => model.Status)
         </dt>
@@ -70,18 +84,6 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Ranking)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CatPermalink)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CatPermalink)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CatMetatag)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CatMetatag)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ShowMenu)
